// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bottom right border 1`] = `
.c0 {
  border-bottom: 0.2em blue solid;
  border-right: 0.2em blue solid;
}

<button
  class="c0"
/>
`;

exports[`Bottom right border not modifiable 1`] = `
.c0 {
  border-bottom: 0.2em blue solid;
  border-right: 0.2em blue solid;
  color: #fff;
  cursor: not-allowed!important;
}

<button
  class="c0"
/>
`;
